--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/charts": "^1.2.14",
     "axios": "^0.21.4",
     "express-cors": "0.0.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-gmaps": "^1.9.0",
     "react-redux": "^7.0.3",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^0.9.5",
+    "recharts": "^2.1.6",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
